# clinic-test-app

./: .black  .env.example  .env.test.example  .flake8  .gitignore  .isort.cfg  Dockerfile  Makefile  README.md  answers.txt  docker-compose.test.yml  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
app/: config.py  main.py
app/dao/: base.py  dao.py
app/database/: db.py
app/dependencies/: dao_dep.py
app/migration/: env.py
app/migration/versions/: 7b82d87e167a_original.py  ffed431d64b3_first_version.py
app/models/: appointments.py
app/routers/: appointments.py  health.py
app/schemas/: appointment.py
app/tests/: conftest.py  inttest.py  test_init.py  test_unit.py  unittest.py
dependencies/: dao_dep.py
routers/: appointments.py
